fix overflow

--- a/eve-raiders-data/src/AuthenticatedApp/OreBuyback/MiningIskEfficiency/MiningIskEfficiency.module.scss
+++ b/eve-raiders-data/src/AuthenticatedApp/OreBuyback/MiningIskEfficiency/MiningIskEfficiency.module.scss
@@ -1,5 +1,7 @@
 .iskEfficiency {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
